test/classes/casts/argumentCoerce_ConstIn/error/from-unmanaged-A-nilable-to-unmanaged-A.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from unmanaged A? to unmanaged A
proc bar(const in x: unmanaged A) {}
proc foo() {
  var a = new unmanaged A?();
  bar(a);
}
proc main() {
  foo();
}
